fix: Dark mode on JIRA card

--- a/src/app/room/rich-topic/rich-topic.component.scss
+++ b/src/app/room/rich-topic/rich-topic.component.scss
@@ -1,6 +1,6 @@
 .rich-topic {
   padding: 1rem;
-  background: #f4f5f6;
+  background: var(--light-background-color);
   margin: 1rem 0;
   border-radius: 18px;
 
